# Animal_Classification

./: .gitignore  README.md  app.py  export_model.py  export_onnx.py  requirements.txt
animals_cpp/: CMakeLists.txt  predict.cpp
models/: mobilenetv3.onnx
src/: predict.py  prepare_data.py  train.py
